fixed long titled movies on small screens

--- a/movie-theater/src/components/movieComponents/Movie/Movie.scss
+++ b/movie-theater/src/components/movieComponents/Movie/Movie.scss
@@ -28,8 +28,8 @@
         left: 5%;
 
         @media (max-width: 500px) {
-            top: 40vh;
-            width: 100%;
+            top: 35vh;
+            width: 95%;
         }
     
         h1 {
@@ -37,7 +37,7 @@
             margin-bottom: 20px;
 
             @media (max-width: 500px) {
-                font-size: 3rem;
+                font-size: 2.5rem;
                 margin-bottom: 10px;
             }
         }
@@ -49,17 +49,21 @@
                 font-size: 2rem;
                 font-weight: 300;
                 margin-bottom: 10px;
-                margin-right: 15px;
+                // margin-right: 15px;
 
                 @media (max-width: 500px) {
                     font-size: 1.5rem;
-                    margin-right: 10px;
+                    // margin-right: 10px;
                     margin-bottom: 5px;
                 }
             }
     
             .rating {
                 color: rgb(255, 206, 72);
+
+                @media (max-width: 500px) {
+                    margin-right: 10px;
+                }
             }
     
             .genres {
@@ -67,6 +71,10 @@
                 
                 p {
                     margin-right: 10px;
+
+                    @media (max-width: 500px) {
+                        margin-right: 5px;
+                    }
                 }
             }
 
@@ -155,7 +163,7 @@
         .small-screen-summary {
             font-size: 1.8rem;
             position: absolute;
-            top: 18vh;
+            top: 23vh;
         }
     }
     .summary-container {
@@ -168,7 +176,7 @@
         display: flex;
 
         @media (max-width: 500px) {
-            top: 61vh;
+            top: 62vh;
             right: 0;
             left: 5%;
             width: 95%;
